--- a/app/src/main/res/layout/item_itinerary.xml
+++ b/app/src/main/res/layout/item_itinerary.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="4dp"
+        android:drawablePadding="4dp"
         android:textSize="14sp"
         app:drawableStartCompat="@drawable/baseline_location_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,11 +67,13 @@
         android:id="@+id/tv_note"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         android:button="@drawable/outline_sticky_note_2_24"
         android:clickable="false"
         android:ellipsize="end"
         android:gravity="top"
         android:maxLines="4"
+        android:paddingStart="4dp"
         app:layout_constraintBottom_toBottomOf="@id/materialCardView"
         app:layout_constraintEnd_toEndOf="@+id/tv_location"
         app:layout_constraintStart_toStartOf="@+id/tv_location"
