--- a/app/src/main/res/layout/activity_itinerary_detail.xml
+++ b/app/src/main/res/layout/activity_itinerary_detail.xml
@@ -98,6 +98,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                android:maxLines="1"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView_photo_url"
+                app:layout_constraintTop_toTopOf="@id/imageView_photo_url"
+                tools:text="Category" />
 
             <TextView
                 android:id="@+id/tv_name"
@@ -110,7 +121,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView_photo_url"
-                app:layout_constraintTop_toTopOf="@+id/imageView_photo_url"
+                app:layout_constraintTop_toBottomOf="@id/tv_category"
                 tools:text="Borobudur Temple" />
 
             <TextView
@@ -128,4 +139,14 @@
                 tools:text="Magelang, Central Java" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/outline_edit_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
