Update UI when update data on ItineraryDetailActivity.kt

--- a/app/src/main/res/layout/activity_itinerary_detail.xml
+++ b/app/src/main/res/layout/activity_itinerary_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.feature.itinerary.view.activity.ItineraryDetailActivity">
+    tools:context=".presentation.feature.itinerary.view.itinerarydetail.ItineraryDetailActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_itinerary"
