--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/checkBox_beach"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:checked="false"
                 android:text="@string/text_beach"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
@@ -66,7 +66,7 @@
                 android:id="@+id/checkBox_mountain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:checked="false"
                 android:text="@string/text_mountain"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
@@ -76,7 +76,7 @@
                 android:id="@+id/checkBox_cultural"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:checked="false"
                 android:text="@string/text_cultural"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
@@ -86,7 +86,7 @@
                 android:id="@+id/checkBox_culinary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:checked="false"
                 android:text="@string/text_culinary"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
