--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -23,10 +23,17 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <include layout="@layout/item_shimmer" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <include layout="@layout/item_shimmer" />
+                <include layout="@layout/item_shimmer" />
+                <include layout="@layout/item_shimmer" />
+            </LinearLayout>
 
         </com.facebook.shimmer.ShimmerFrameLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
