--- a/app/src/main/res/layout/item_shimmer.xml
+++ b/app/src/main/res/layout/item_shimmer.xml
@@ -5,6 +5,7 @@
     android:layout_height="350dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:backgroundTint="@color/black"
     app:cardCornerRadius="16dp">
 
